--- a/httpswww.salmuncsspc.com.html
+++ b/httpswww.salmuncsspc.com.html
@@ -49,8 +49,8 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-4" href="httpswww.salmuncsspc.com.html">INICIO</a> </li><li class="nav-item dropdown open">
-                    <a class="nav-link link dropdown-toggle text-secondary display-4" href="https://mobirise.co" target="_blank" data-toggle="dropdown-submenu" aria-expanded="true">COMITÉS</a>  <div class="dropdown-menu"><a class="dropdown-item text-secondary display-4" href="page3.html">DISEC<br></a><a class="dropdown-item text-secondary display-4" href="page2.html">ECOFIN</a><a class="dropdown-item text-secondary display-4" href="page5.html">SOCHUM<br></a><a class="dropdown-item text-secondary display-4" href="page4.html">CONSEJO DE SEGURIDAD</a><a class="dropdown-item text-secondary display-4" href="page6.html">MUNKIDS&nbsp;</a></div>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-4" href="httpswww.salmuncsspc.com.html">INICIO</a> </li><li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-secondary display-4" href="https://mobirise.co" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">COMITÉS</a>  <div class="dropdown-menu"><a class="dropdown-item text-secondary display-4" href="page3.html">DISEC<br></a><a class="dropdown-item text-secondary display-4" href="page2.html">ECOFIN</a><a class="dropdown-item text-secondary display-4" href="page5.html">SOCHUM<br></a><a class="dropdown-item text-secondary display-4" href="page4.html">CONSEJO DE SEGURIDAD</a><a class="dropdown-item text-secondary display-4" href="page6.html">MUNKIDS&nbsp;</a></div>
                 </li><li class="nav-item">   <a class="nav-link link text-secondary display-4" href="assets/files/HANDBOOK-SALMUN2020.pdf" target="_blank">HANDBOOK</a>  </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSc7FXhnMK9Gf2u490nImHPvWQw427BH1xobTOpRmNgTu_tuhQ/viewform?usp=sf_link" target="_blank"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
                     
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="header4 cid-rVqJVuq3qL mbr-parallax-background" id="header4-3">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header4 cid-rVqJVuq3qL mbr-parallax-background" id="header4-3">
 
     
 
@@ -177,7 +177,7 @@
                         <div class="testimonial-photo">
                             <img src="assets/images/whatsapp-image-2020-07-11-at-9.43.21-am-1-240x167.jpeg" alt="" title="">
                         </div>
-                        <p class="mbr-text mbr-fonts-style mbr-white display-7">"La práctica de la paz y la reconciliacion es una de las mas vitales y artísticas de las acciones humanas".<br>-Nhat Hanh<br>Bienvenidos sean todos delegados a la IV versión del "Salesian's Model of United Nations" SALMUN, &nbsp;mi nombre es Juan Sebastian Romero Piñeres, tengo dieciocho años y soy de Cartagena, es para mí un honor ser su Secretario General, trabajar con y para ustedes fue, es y siempre será mi sueño; pues ser su acompañante y guía en conjunto con los directivos, presidentes y demás participantes que hacen parte de este grandioso proyecto, es nuestra meta. En esta nueva versión del Salmun encontrarás temas de gran relevancia mundial que nos muestran realidades crudas e inimaginables donde se tendrá que poner a prueba el don de la palabra y la diplomacia; ¡estos dos factores serán su herramienta más importante a la hora de exponer sus ideas y deslumbrar a las demas delegaciones con sus puntos de vista! <br>Dicho esto, los invito a participar en el SALMUN 2020 donde "la mejor manera de predecir el futuro es creandolo".<br>Muchas gracias</p>
+                        <p class="mbr-text mbr-fonts-style mbr-white display-7">"La práctica de la paz y la reconciliacion es una de las mas vitales y artísticas de las acciones humanas".<br>-Nhat Hanh<br>Bienvenidos sean todos delegados a la V versión del "Salesian's Model of United Nations" SALMUN, &nbsp;mi nombre es Juan Sebastian Romero Piñeres, tengo dieciocho años y soy de Cartagena, es para mí un honor ser su Secretario General, trabajar con y para ustedes fue, es y siempre será mi sueño; pues ser su acompañante y guía en conjunto con los directivos, presidentes y demás participantes que hacen parte de este grandioso proyecto, es nuestra meta. En esta nueva versión del Salmun encontrarás temas de gran relevancia mundial que nos muestran realidades crudas e inimaginables donde se tendrá que poner a prueba el don de la palabra y la diplomacia; ¡estos dos factores serán su herramienta más importante a la hora de exponer sus ideas y deslumbrar a las demas delegaciones con sus puntos de vista! <br>Dicho esto, los invito a participar en el SALMUN 2020 donde "la mejor manera de predecir el futuro es creandolo".<br>Muchas gracias</p>
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">
