create github pages

--- a/httpswww.salmuncsspc.com.html
+++ b/httpswww.salmuncsspc.com.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="header4 cid-rVqJVuq3qL mbr-parallax-background" id="header4-3">
+<section class="engine"><a href="https://mobirise.info/f">simple web creator</a></section><section class="header4 cid-rVqJVuq3qL mbr-parallax-background" id="header4-3">
 
     
 
@@ -211,7 +211,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">
-                             Sara Michelle Ruiz Vargas</div>
+                             Sara Michelle Ruíz Vargas</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
                                Directora General</small>
                     </div>
