--- a/page2.html
+++ b/page2.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="cid-rVrtfIR1u7 mbr-fullscreen mbr-parallax-background" id="header2-r">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="cid-rVrtfIR1u7 mbr-fullscreen mbr-parallax-background" id="header2-r">
 
     
 
