--- a/page6.html
+++ b/page6.html
@@ -49,17 +49,17 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-4" href="httpswww.salmuncsspc.com.html">INICIO</a> </li><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-secondary display-4" href="https://mobirise.co" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">COMITÉS</a>  <div class="dropdown-menu"><a class="dropdown-item text-secondary display-4" href="page3.html">DISEC<br></a><a class="dropdown-item text-secondary display-4" href="page2.html">ECOFIN</a><a class="dropdown-item text-secondary display-4" href="page5.html">SOCHUM<br></a><a class="dropdown-item text-secondary display-4" href="page4.html">CONSEJO DE SEGURIDAD</a><a class="dropdown-item text-secondary display-4" href="page6.html">MUNKIDS&nbsp;</a></div>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-4" href="httpswww.salmuncsspc.com.html">INICIO</a> </li><li class="nav-item dropdown open">
+                    <a class="nav-link link dropdown-toggle text-secondary display-4" href="https://mobirise.co" target="_blank" data-toggle="dropdown-submenu" aria-expanded="true">COMITÉS</a>  <div class="dropdown-menu"><a class="dropdown-item text-secondary display-4" href="page3.html">DISEC<br></a><a class="dropdown-item text-secondary display-4" href="page2.html">ECOFIN</a><a class="dropdown-item text-secondary display-4" href="page5.html">SOCHUM<br></a><a class="dropdown-item text-secondary display-4" href="page4.html">CONSEJO DE SEGURIDAD</a><a class="dropdown-item text-secondary display-4" href="page6.html">MUNKIDS&nbsp;</a></div>
                 </li><li class="nav-item">   <a class="nav-link link text-secondary display-4" href="assets/files/HANDBOOK-SALMUN2020.pdf" target="_blank">HANDBOOK</a>  </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSc7FXhnMK9Gf2u490nImHPvWQw427BH1xobTOpRmNgTu_tuhQ/viewform?usp=sf_link" target="_blank"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-secondary display-4" href="tel:+1-234-567-8901"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
                     
                     INSCRIPCIONES</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-rVvL4EAIUI mbr-fullscreen mbr-parallax-background" id="header2-13">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="cid-rVvL4EAIUI mbr-fullscreen mbr-parallax-background" id="header2-13">
 
     
 
